Updatehtml index.html

--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
 </head>
 <body>
     <div class="container">
-        <h1>Dán/ Nhập Chữ</h1>
+        <h1>NGÔ TÍNH TỚI ĐÂY</h1>
         <div class="input-group">
             <input type="text" id="inputText" placeholder="Nhập chữ vào đây">
         </div>
         <button class="btn" onclick="replaceWordsWithFont()">Thay đổi</button>
         <div class="result" id="resultText"></div>
     </div>
+    <button class="btn" id="copyButton" onclick="copyToClipboard()">Copy</button>
+
 
     <script src="my.js"></script>
 </body>
-</html>
+</html> 
+
